--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800&amp;subset=cyrillic-ext" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" media="screen" href="./css/normalize.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/normalize.css"/>
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css"/>
   <title>Cinemaddict</title>
 </head>
 <body>
@@ -32,6 +32,6 @@
     <!-- Количество фильмов -->
   </section>
 </footer>
-
+<script src="../src/main.js"></script>
 </body>
 </html>
