add work with server

--- a/markup/index-loading.html
+++ b/markup/index-loading.html
@@ -32,14 +32,14 @@
   </nav>
 
   <ul class="sort">
-    <li><a href="#" class="sort__button sort__button--active">Sort by default</a></li>
-    <li><a href="#" class="sort__button">Sort by date</a></li>
-    <li><a href="#" class="sort__button">Sort by rating</a></li>
+    <li><a href="#" class="sort__button sort__button--active">SortView by default</a></li>
+    <li><a href="#" class="sort__button">SortView by date</a></li>
+    <li><a href="#" class="sort__button">SortView by rating</a></li>
   </ul>
 
   <section class="films">
     <section class="films-list">
-      <h2 class="films-list__title">Loading...</h2>
+      <h2 class="films-list__title">LoadingView...</h2>
     </section>
   </section>
 </main>
