--- a/markup/index-loading.html
+++ b/markup/index-loading.html
@@ -39,7 +39,7 @@
 
   <section class="films">
     <section class="films-list">
-      <h2 class="films-list__title">LoadingView...</h2>
+      <h2 class="films-list__title">Loading...</h2>
     </section>
   </section>
 </main>
